--- a/Exercise04.ipynb
+++ b/Exercise04.ipynb
@@ -43,32 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 channel Terms of Service accepted"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "==> WARNING: A newer version of conda exists. <==\n",
-      "    current version: 25.7.0\n",
-      "    latest version: 25.9.1\n",
-      "\n",
-      "Please update conda by running\n",
-      "\n",
-      "    $ conda update -n base -c defaults conda\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Retrieving notices: done\n",
+      "3 channel Terms of Service accepted\n",
       "Channels:\n",
       " - defaults\n",
       "Platform: win-64\n",
@@ -77,19 +52,11 @@
       "\n",
       "## Package Plan ##\n",
       "\n",
-      "  environment location: d:\\Lectures\\anaconda\\envs\\aimat\n",
+      "  environment location: d:\\a_coding\\anaconda\\envs\\aimat\n",
       "\n",
       "  added / updated specs:\n",
       "    - seaborn\n",
       "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    seaborn-0.13.2             |  py310haa95532_3         603 KB\n",
-      "    ------------------------------------------------------------\n",
-      "                                           Total:         603 KB\n",
       "\n",
       "The following NEW packages will be INSTALLED:\n",
       "\n",
@@ -97,14 +64,7 @@
       "\n",
       "\n",
       "\n",
-      "Downloading and Extracting Packages: ...working...\n",
-      "seaborn-0.13.2       | 603 KB    |            |   0% \n",
-      "seaborn-0.13.2       | 603 KB    | #8         |  19% \n",
-      "seaborn-0.13.2       | 603 KB    | ########## | 100% \n",
-      "seaborn-0.13.2       | 603 KB    | ########## | 100% \n",
-      "seaborn-0.13.2       | 603 KB    | ########## | 100% \n",
-      "                                                     \n",
-      " done\n",
+      "Downloading and Extracting Packages: ...working... done\n",
       "Preparing transaction: done\n",
       "Verifying transaction: done\n",
       "Executing transaction: done\n"
